testsuite/tests/parser/should_fail/strictnessDataCon_B.stderr

strictnessDataCon_B.hs:1:42: error:
    parse error on input ‘}’ (possibly incorrect indentation or mismatched brackets)
